forgot to change the password

--- a/FastAPI/static/Countryboy.html
+++ b/FastAPI/static/Countryboy.html
@@ -34,7 +34,7 @@
                     let userInput = document.getElementById("inputField").value.trim();
         
                     // Replace the condition with your correct input validation
-                    if (userInput === "yourcorrectinput") {
+                    if (userInput === "SyrupIsTheBest") {
                         document.getElementById("result").style.display = "block";
                         document.getElementById("inputForm").style.display = "none"; // hide the form
                     } else {
